2015-01-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (WriteRowSamples): Ensure that callback function is
	always defined. Resolves Coverity CID 10122.
	(ReadRowSamples): Ensure that callback function is always
	defined. Resolves Coverity CID 10125.

	* magick/random.c (InitializeMagickRandomKernel): Avoid possible
	double-close of file.  Resolves Coverity CID 10257.

	* coders/histogram.c (WriteHISTOGRAMImage): Avoid possible divide
	by zero exception.  Resolves Coverity CID 10107.

	* magick/error.c (MagickFatalError): Document that
	MagickFatalError() is not supposed to return (program must quit)
	and add GCC/Clang hints to that effect.

	* magick/bit_stream.c (BitAndMasks): Avoid possible access
	one-beyond end of BitAndMasks array.  It is not clear if there is
	a possible bug with 32-bit quantums.  If there is a bug, it has
	not been noticed via testing.  Resolves Coverity CID 10213.

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Avoid buffer
	overrun in the case of an astonishingly long environment variable
	string.  Resolves Coverity CID 10267.
	(AddTemporaryFileToList): Use strlcpy() rather than strlcpy().  In
	practice, should not make a difference.  Will quiet Coverity CID
	10321.

	* magick/command.c (GMCommandSingle): Don't use the address of a
	stack allocation to update argv[0]. Removed updating argv[0] until
	a better design can be found.  Resolves Coverity CID 10223.
	(GMCommandSingle): Plan B: Use static allocation from
	SetClientName() to both store the new command name and provide
	storage for argv[0].

	* magick/utility.c (SystemCommand): Fix possible overwrite of
	memory location due to uninitialized 'end' pointer.  Resolves
	Coverity CID 10251.

	* magick/blob.c (WriteBlobFile): Was not closing file in certain
	error conditions.  Resolves Coverity CID 10237.

	* coders/cineon.c (ReadCINEONImage): Don't trust file header so
	much.  Resolves Coverity CIDs 10079, 10310, 10325.
