@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2015-01-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/image.c (CloneImage): The definition is poor as to what a
+non-orphan clone should do.  However, the definition surely does
+not include crashing the software or supplanting the original
+image in an image list.  Clone image blob and previous/next
+pointers but do not supplant original image in list.  Resolves
+Coverity CID 10155.</li>
+</ul>
+</blockquote>
 <p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
